# n8n-factory

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  PROJECT_PLAN.md  README.md  TEMPLATES.md  debug_feature_test.json  docker-compose.yaml  master_production_workflow.json  optimization_test.json  pyproject.toml  recipe.schema.json
examples/: advanced.yaml  test_build_workflow.json  test_workflow.yaml
recipes/: debug_test.yaml  master_workflow.yaml  master_workflow_optimized.yaml  optimize_test.yaml  optimize_test_optimized.yaml  simulation_test.yaml
scripts/: generate_docs.py  generate_schema.py  install_hooks.py  tutorial.py
templates/: BUILDING.template.md  KANBAN.template.md  PLANNING.template.md  active_campaign.json  airtable.json  amqp.json  asana.json  box.json  buffer.json  circleci.json  classification_prompt.json  clickup.json  code.json  compare_datasets.json  compression.json  cron.json  crypto.json  date_time.json  debug_logger.json  digital_ocean.json  discord.json  document_loader.json  dropbox.json  dynamodb.json  edit_image.json  elasticsearch.json  email_send.json  error_trigger.json  execute_command.json  execute_workflow.json  facebook.json  filter.json  freshdesk.json  ftp.json  github.json  gitlab.json  gmail.json  google_analytics.json  google_calendar.json  google_contacts.json  (+121 more)
tests/: conftest.py  test_assembler.py  test_assembler_coverage.py  test_assembler_explicit.py  test_cli.py  test_commands.py  test_commands_coverage_1.py  test_commands_coverage_10.py  test_e2e.py  (+41 more)
(+70 files in other folders)
